<resources>
    <string name="app_name">Parking Control</string>
    <string name="Titulo">Bienvenido a Parking System</string>
    <string name="iniciosesion">Iniciar sesión para empezar</string>
    <string name="usuario">Nombre de usuario</string>
    <string name="Contraseña">Contraseña</string>
    <string name="btnIniciarSesion">Iniciar Sesión</string>
    <string name="lnkRegistrarse">Registrarse</string>
    <string name="txtNombre"> Nombre</string>
    <string name="txtCorreo"> Correo electrónico</string>
    <string name="txtPass"> Contraseña</string>
    <string name="txtRePass"> Repetir Contraseña</string>
    <string name="title_activity_principal">Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_parqueos">Parqueos</string>
    <string name="menu_micuenta">Mi Cuenta</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>