<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="MainActivity">


    <TextView
        android:id="@+id/textView6"
        android:layout_width="341dp"
        android:layout_height="40dp"
        android:layout_marginTop="56dp"
        android:text="@string/Titulo"
        android:textColor="#2196F3"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/iniciosesion"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="200dp"
        android:layout_height="79dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:srcCompat="@drawable/car" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="320dp"
        android:layout_height="130dp"
        android:layout_marginTop="48dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4">

        <EditText
            android:id="@+id/txtUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/usuario"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/txtContrasenia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Contraseña"
            android:inputType="textPassword" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="217dp"
        android:layout_height="122dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <Button
            android:id="@+id/btnIniciarSesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#A5A1A1"
            android:onClick="iniciarSesion"
            android:text="@string/btnIniciarSesion"
            android:textColorHint="#DCDACBCB" />

        <TextView
            android:id="@+id/lnkRegistrarse"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:clickable="true"
            android:gravity="center"
            android:onClick="registrar"
            android:text="@string/lnkRegistrarse"
            android:textColor="#2196F3"
            android:textSize="16sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>